--- a/examples/dynamic_clouds.html
+++ b/examples/dynamic_clouds.html
@@ -59,7 +59,7 @@
 		cloudsCanvas.height = height;
 		container.appendChild(cloudsCanvas);
 		const forwardRenderer = new ForwardRenderer(cloudsCanvas, { antialias: true, alpha: true });
-		forwardRenderer.renderPass.setClearColor(0, 0, 0, 0);
+		forwardRenderer.setClearColor(0, 0, 0, 0);
 
 		const scene = new t3d.Scene();
 		scene.environmentLightIntensity = 0.8;
