--- a/examples/dynamic_sky.html
+++ b/examples/dynamic_sky.html
@@ -46,9 +46,9 @@
 		canvas.height = height;
 		container.appendChild(canvas);
 		const forwardRenderer = new ForwardRenderer(canvas, { antialias: true, alpha: true });
-		forwardRenderer.renderPass.setClearColor(0, 0, 0, 0);
+		forwardRenderer.setClearColor(0, 0, 0, 0);
 
-		const capabilities = forwardRenderer.renderPass.capabilities;
+		const capabilities = forwardRenderer.capabilities;
 
 		const skyPrecomputeUtil = new SkyPrecomputeUtil(capabilities);
 		skyPrecomputeUtil.computeTransmittance(forwardRenderer);
