--- a/examples/dynamic_stars.html
+++ b/examples/dynamic_stars.html
@@ -43,7 +43,7 @@
 		canvas.height = height;
 		container.appendChild(canvas);
 		const forwardRenderer = new ForwardRenderer(canvas, { antialias: true, alpha: true });
-		forwardRenderer.renderPass.setClearColor(0, 0, 0, 1);
+		forwardRenderer.setClearColor(0, 0, 0, 1);
 
 		const scene = new t3d.Scene();
 
