--- a/examples/dynamic_timeline.html
+++ b/examples/dynamic_timeline.html
@@ -43,9 +43,9 @@
 		canvas.height = height;
 		document.body.appendChild(canvas);
 		const forwardRenderer = new ForwardRenderer(canvas, { antialias: true, alpha: false });
-		forwardRenderer.renderPass.setClearColor(0, 0, 0, 0);
+		forwardRenderer.setClearColor(0, 0, 0, 0);
 
-		const capabilities = forwardRenderer.renderPass.capabilities;
+		const capabilities = forwardRenderer.capabilities;
 
 		const skyPrecomputeUtil = new SkyPrecomputeUtil(capabilities);
 		skyPrecomputeUtil.computeTransmittance(forwardRenderer);
